test/errors/type/str/ltrim1.yasl
mt.lookup('', .ltrim)(1, true)
